# django-app-heroku

./: .pre-commit-config.yaml  LICENSE  Procfile  README.rst  manage.py  pyproject.toml  requirements.txt
pysprings_app/: settings.py  urls.py  wsgi.py
tests/: test_pysprings_app.py
