[tool.poetry]
name = "pysprings-app"
version = "0.1.0"
description = ""
authors = ["Ryan Freckleton <ryan.freckleton@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
django = "^3.0"
gunicorn = "^20.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-django = "^3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
